<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recipe Box</string>
    <string name="browse_recipes">Browse Recipes</string>
    <string name="grocery_list">Grocery List</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="yummly_error">Error searching for recipes, try the search again</string>
    <string name="filter_results">Filter results</string>
    <string name="num_ingredients">Ingredients count: </string>
    <string name="ingredients_list">Ingredients list:</string>
    <string name="time">Time: </string>
    <string name="rating">Rating:</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for recipes</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="select_ingredients">Select ingredients you currently have:</string>
    <string name="view_directions">View Directions</string>
    <string name="stars">Stars</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="not_available">This feature is currently not available.</string>
    <string name="with_ingredient">With Ingredient</string>
    <string name="without_ingredient">Without Ingredient</string>
    <string name="add">+Add</string>
    <string name="main_dish">Main Dish</string>
    <string name="lunch_and_snack">Lunch and Snack</string>
    <string name="breakfast_and_brunch">Breakfast and Brunch</string>
    <string name="appetizers">Appetizers</string>
    <string name="desserts">Desserts</string>
    <string name="side_dishes">Side Dishes</string>
    <string name="salad">Salad</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="minutes">Minutes</string>
    <string name="time_in_minutes">Time in Minutes</string>
    <string name="no_results">There were no results for your search.\nTry clearing your filters.</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading....</string>
    <string name="current_search">Current Search:</string>
    <string name="clear_search">Clear</string>
    <string name="empty_grocery_list">You don\'t have any \n saved recipes.</string>
    <string name="no_selected_recipes_grocery_list">You don\'t have any recipes \n selected in filter.</string>
    <string name="empty_saved_recipes_list">You don\'t have any \n saved recipes.</string>

    <!--YummlyFilterHeaderStrings-->
    <string name="course_header">course^course-</string>


    <string name="grocery_list_filter_message">Which recipes are you\nshopping for?</string>

</resources>
