<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp">

        <EditText
            android:hint="@string/with_ingredient"
            android:id="@+id/with_ingredient_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/with_ingredient_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_alignParentRight="true"
            android:text="@string/add"/>

    </RelativeLayout>

    <GridView
        android:id="@+id/with_ingredients_list"
        android:numColumns="3"
        android:paddingLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/without_ingredient"
            android:id="@+id/without_ingredient_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/without_ingredient_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_alignParentRight="true"
            android:text="@string/add"/>

    </RelativeLayout>

    <RelativeLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/time_in_minutes"
            android:hint="@string/time_in_minutes"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/add_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_alignParentRight="true"
            android:text="@string/add"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/main_dish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/main_dish_text"
            android:text="@string/main_dish"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/lunch_and_snack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/lunch_and_snack_text"
            android:text="@string/lunch_and_snack"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/breakfast_and_brunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/breakfast_and_brunch_text"
            android:text="@string/breakfast_and_brunch"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/appetizers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/appetizers_text"
            android:text="@string/appetizers"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/desserts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/desserts_text"
            android:text="@string/desserts"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/side_dishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/side_dishes_text"
            android:text="@string/side_dishes"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/salad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/salad_text"
            android:text="@string/salad"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/clear_filters"
        android:text="@string/clear_filters"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>