<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <CheckBox
            android:id="@+id/dialog_favorite"
            style="?android:attr/starStyle"
            android:layout_gravity="center_horizontal"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Favorite"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/off_black"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/close_dialog"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/cancel"/>

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/recipe_image"
            android:id="@+id/recipe_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:src="@drawable/ic_launcher"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/recipe_name"
                android:textSize="22dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                tools:text="Recipe Name"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/time"
                    style="@style/AppTheme.RecipeDialogText"/>

                <TextView
                    android:id="@+id/time_in_minutes"
                    style="@style/AppTheme.RecipeDialogText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/rating"
                    style="@style/AppTheme.RecipeDialogText"/>

                <TextView
                    android:id="@+id/rating_by_stars"
                    style="@style/AppTheme.RecipeDialogText"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_black"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:text="@string/ingredients_list"
        style="@style/AppTheme.RecipeDialogText"/>

    <ListView
        android:id="@+id/ingredients_list"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="200dp"/>

    <Button
        android:id="@+id/view_directions"
        android:text="@string/view_directions"
        android:paddingTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="16dp"/>

</LinearLayout>