<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/favorite"
            style="?android:attr/starStyle"
            android:layout_gravity="center_horizontal"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="50dp"
            tools:src="@drawable/ic_launcher"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Test Recipe"/>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ingredients"
                android:text="@string/num_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Ingredients: "/>

            <TextView
                android:id="@+id/number_of_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="5"/>

        </LinearLayout>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"/>

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text=" 5 Stars"/>

        </LinearLayout>


        <LinearLayout android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                tools:text="Time: "/>

            <TextView
                android:id="@+id/time_to_cook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="25"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>